examples/istio-based-service-mesh/observability/kiali/aad-auth-proxy-template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aad-auth-proxy
  namespace: aad-auth-proxy-ns
  labels:
    app: aad-auth-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aad-auth-proxy
  template:
    metadata:
      labels:
        app: aad-auth-proxy
    spec:
      serviceAccountName: default
      containers:
      - name: aad-auth-proxy
        image: mcr.microsoft.com/azuremonitor/auth-proxy/prod/aad-auth-proxy/images/aad-auth-proxy:0.1.0-main-04-10-2024-7067ac84
        ports:
        - name: auth-port
          containerPort: 8082
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /health
            port: auth-port
          initialDelaySeconds: 5
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /ready
            port: auth-port
          initialDelaySeconds: 5
          timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: aad-auth-proxy
  namespace: aad-auth-proxy-ns
  labels:
    app: aad-auth-proxy
spec:
  selector:
    app: aad-auth-proxy
  ports:
  - name: http
    port: 80
    targetPort: 8082
    protocol: TCP
  type: ClusterIP
